--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -152,7 +152,7 @@
 
 #act-2 {
 	background: #4e4d48 url(../img/act2-background.png) repeat-x center bottom;
-	padding-bottom: 37px;
+	padding-bottom: 75px;
 	padding-top: 41px;
 	/**
 	 * @bugfix hasLayout fix for background color
@@ -323,10 +323,11 @@
 				url(../img/page-compact/act1-crowd.png) center bottom repeat-x,
 				#d6e6f4;
 }
-.multiplebgs #act-2 {
+.multiplebgs .page-compact #act-2 {
 	background: url(../img/cardboard.png) center 0 repeat-x,
 				url(../img/page-compact/act2-heart.jpg) center 0 no-repeat,
 				#74736f;
+	padding-bottom: 37px;
 }
 
 .card-form {
